--- a/index.html
+++ b/index.html
@@ -313,9 +313,9 @@
                         <div class="row">
                             <div class="col-md-4">
                                 <div class="news-item">
-                                    <img src="assets/images/banner-02.jpg" class="d-block w-100" alt="Potholes">
+                                    <img src="assets/images/maize.jpg" class="d-block w-100" alt="Potholes">
                                     <div class="news-caption">
-                                        <p class="headline">Potholes</p>
+                                        <p class="headline">Relief Maize Flagged in Chibombo</p>
                                     </div>
                                 </div>
                             </div>
@@ -390,25 +390,25 @@
                         <div class="row">
                             <div class="col-md-4">
                                 <div class="news-item">
-                                    <img src="assets/images/CLEAN PARK.jpg" class="d-block w-100" alt="Cleaned Park">
+                                    <img src="assets/images/youth.jpg" class="d-block w-100" alt="Cleaned Park">
                                     <div class="news-caption">
-                                        <p class="headline">Cleaned Park</p>
+                                        <p class="headline">2024 YoouthDay</p>
                                     </div>
                                 </div>
                             </div>
                             <div class="col-md-4">
                                 <div class="news-item">
-                                    <img src="assets/images/FIXED ROADS.jpg" class="d-block w-100" alt="Fixed Road">
+                                    <img src="assets/images/class.jpg" class="d-block w-100" alt="Fixed Road">
                                     <div class="news-caption">
-                                        <p class="headline">Fixed Road</p>
+                                        <p class="headline">New Classroom Block</p>
                                     </div>
                                 </div>
                             </div>
                             <div class="col-md-4">
                                 <div class="news-item">
-                                    <img src="assets/images/New Streetlights.jpg" class="d-block w-100" alt="New Streetlights">
+                                    <img src="assets/images/mungule.jpg" class="d-block w-100" alt="New Streetlights">
                                     <div class="news-caption">
-                                        <p class="headline"><strong>New Streetlights</strong></p>
+                                        <p class="headline"><strong>Mungule Min Hospital</strong></p>
                                     </div>
                                 </div>
                             </div>
