--- a/index.html
+++ b/index.html
@@ -242,7 +242,22 @@
     }
 }
 
-
+   .marquee {
+            font-size: 24px;
+            font-weight: bold;
+        }
+        .red {
+            color: red;
+        }
+        .green {
+            color: green;
+        }
+        .black {
+            color: black;
+        }
+        .orange {
+            color: orange;
+        }
 
     </style>
 </head>
@@ -291,7 +306,14 @@
             </div>
         </div>
     </header>
-
+<body>
+    <marquee class="marquee" behavior="scroll" direction="left" scrollamount="5">
+        <span class="red">Red Text</span> 
+        <span class="green">Green Text</span> 
+        <span class="black">Black Text</span> 
+        <span class="orange">Orange Text</span>
+    </marquee>
+    
     <!-- Search Section Start -->
     <div class="search-section">
         <input type="search" placeholder="Search...">
@@ -347,25 +369,25 @@
                         <div class="row">
                             <div class="col-md-4">
                                 <div class="news-item">
-                                    <img src="assets/images/banner-02.jpg" class="d-block w-100" alt="Potholes">
+                                    <img src="assets/images/chair.jpg" class="d-block w-100" alt="Potholes">
                                     <div class="news-caption">
-                                        <p class="headline">Potholes</p>
+                                        <p class="headline">Youth Day Celebration</p>
                                     </div>
                                 </div>
                             </div>
                             <div class="col-md-4">
                                 <div class="news-item">
-                                    <img src="assets/images/banner-02.jpg" class="d-block w-100" alt="Graffiti">
+                                    <img src="assets/images/class.jpg" class="d-block w-100" alt="Graffiti">
                                     <div class="news-caption">
-                                        <p class="headline">Graffiti</p>
+                                        <p class="headline">Classroom Block Commissioned</p>
                                     </div>
                                 </div>
                             </div>
                             <div class="col-md-4">
                                 <div class="news-item">
-                                    <img src="assets/images/banner-02.jpg" class="d-block w-100" alt="Broken streetlights">
+                                    <img src="assets/images/munguleh.jpg" class="d-block w-100" alt="Broken streetlights">
                                     <div class="news-caption">
-                                        <p class="headline"><strong>Streetlights</strong></p>
+                                        <p class="headline"><strong>Mungule Min Hospital</strong></p>
                                     </div>
                                 </div>
                             </div>
@@ -406,7 +428,7 @@
                             </div>
                             <div class="col-md-4">
                                 <div class="news-item">
-                                    <img src="assets/images/mungule.jpg" class="d-block w-100" alt="New Streetlights">
+                                    <img src="assets/images/munguleh.jpg" class="d-block w-100" alt="New Streetlights">
                                     <div class="news-caption">
                                         <p class="headline"><strong>Mungule Min Hospital</strong></p>
                                     </div>
@@ -420,6 +442,9 @@
     </section>
     <!-- Citizens Section End -->
 
+
+
+            
     <!-- Developers Section Start -->
     <section class="developers-feature">
         <div class="container">
