--- a/index.html
+++ b/index.html
@@ -308,10 +308,10 @@
     </header>
 <body>
     <marquee class="marquee" behavior="scroll" direction="left" scrollamount="5">
-        <span class="red">Red Text</span> 
-        <span class="green">Green Text</span> 
-        <span class="black">Black Text</span> 
-        <span class="orange">Orange Text</span>
+        <span class="red">60</span> 
+        <span class="green">Years of Celebrating</span> 
+        <span class="black">One Zambia</span> 
+        <span class="orange">One Nation </span>
     </marquee>
     
     <!-- Search Section Start -->
@@ -343,17 +343,17 @@
                             </div>
                             <div class="col-md-4">
                                 <div class="news-item">
-                                    <img src="assets/images/banner-02.jpg" class="d-block w-100" alt="Graffiti">
+                                    <img src="assets/images/munguleh.jpg" class="d-block w-100" alt="Graffiti">
                                     <div class="news-caption">
-                                        <p class="headline">Graffiti</p>
+                                        <p class="headline">Health Facility</p>
                                     </div>
                                 </div>
                             </div>
                             <div class="col-md-4">
                                 <div class="news-item">
-                                    <img src="assets/images/banner-02.jpg" class="d-block w-100" alt="Broken streetlights">
+                                    <img src="assets/images/classb.jpg" class="d-block w-100" alt="Broken streetlights">
                                     <div class="news-caption">
-                                        <p class="headline"><strong>Streetlights</strong></p>
+                                        <p class="headline"><strong>Education</strong></p>
                                     </div>
                                 </div>
                             </div>
@@ -377,7 +377,7 @@
                             </div>
                             <div class="col-md-4">
                                 <div class="news-item">
-                                    <img src="assets/images/class.jpg" class="d-block w-100" alt="Graffiti">
+                                    <img src="assets/images/classb.jpg" class="d-block w-100" alt="Graffiti">
                                     <div class="news-caption">
                                         <p class="headline">Classroom Block Commissioned</p>
                                     </div>
