--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
                         <div class="row">
                             <div class="col-md-4">
                                 <div class="news-item">
-                                    <img src="assets/images/chair.jpg" class="d-block w-100" alt="Potholes">
+                                    <img src="assets/images/aware.jpg" class="d-block w-100" alt="Potholes">
                                     <div class="news-caption">
                                         <p class="headline">Youth Day Celebration</p>
                                     </div>
@@ -420,7 +420,7 @@
                             </div>
                             <div class="col-md-4">
                                 <div class="news-item">
-                                    <img src="assets/images/class.jpg" class="d-block w-100" alt="Fixed Road">
+                                    <img src="assets/images/classb.jpg" class="d-block w-100" alt="Fixed Road">
                                     <div class="news-caption">
                                         <p class="headline">New Classroom Block</p>
                                     </div>
