--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
                                 <div class="news-item">
                                     <img src="assets/images/maize.jpg" class="d-block w-100" alt="Potholes">
                                     <div class="news-caption">
-                                        <p class="headline">Relief Maize Flagged in Chibombo</p>
+                                        <p class="headline"><strong>Relief Maize Flagged in Chibombo</strong></p>
                                     </div>
                                 </div>
                             </div>
@@ -345,7 +345,7 @@
                                 <div class="news-item">
                                     <img src="assets/images/munguleh.jpg" class="d-block w-100" alt="Graffiti">
                                     <div class="news-caption">
-                                        <p class="headline">Health Facility</p>
+                                        <p class="headline"><strong>Health Facility</strong></p>
                                     </div>
                                 </div>
                             </div>
@@ -414,7 +414,7 @@
                                 <div class="news-item">
                                     <img src="assets/images/youth.jpg" class="d-block w-100" alt="Cleaned Park">
                                     <div class="news-caption">
-                                        <p class="headline">2024 YoouthDay</p>
+                                        <p class="headline"><strong>2024 YouthDay</strong></p>
                                     </div>
                                 </div>
                             </div>
@@ -422,7 +422,7 @@
                                 <div class="news-item">
                                     <img src="assets/images/classb.jpg" class="d-block w-100" alt="Fixed Road">
                                     <div class="news-caption">
-                                        <p class="headline">New Classroom Block</p>
+                                        <p class="headline"><strong>New Classroom Block</strong></p>
                                     </div>
                                 </div>
                             </div>
