--- a/index.html
+++ b/index.html
@@ -585,9 +585,7 @@
    
     <!-- Privacy Section End -->
     <footer>
-        <td align="middle"><span class="copyright"> &copy; 2024 Katuba. All Rights Reserved.
-          Designed and Maintained
-          Madura Ngoma, SIN: 2111250942 </td> 
+        <td align="middle"><span class="copyright"> <strong> &copy; 2024 Katuba. All Rights Reserved. Designed and Maintained Madura Ngoma, SIN: 2111250942</strong> </td> 
       </footer>
     <!-- Scripts -->
     <!-- Bootstrap core JavaScript -->
