--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
 
        
         .copyright {
-            font-size: 18px;
-            color: #333;
+            font-size: 30px;
+            color: ffffff;
         }
     .news-item {
         margin-bottom: 20px;
