--- a/index.html
+++ b/index.html
@@ -581,9 +581,23 @@
 </html>
 
 
-    
+   <!-- Katuba Location Section -->
+    <section class="katuba-location">
+        <h2>Katuba Location</h2>
+        <p>123 Katuba Street, Example City, EX 45678</p>
+        <p>Phone: (123) 456-7890</p>
+        <p>Email: info@katubalocation.com</p>
+        <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3153.091867552678!2d-122.41941508468971!3d37.7749292797585!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8085809c5e1947f7%3A0x809c6d6f34d4e72b!2sSan+Francisco%2C+CA%2C+USA!5e0!3m2!1sen!2sin!4v1493900989212"
+            width="600"
+            height="450"
+            style="border:0"
+            allowfullscreen=""
+            loading="lazy">
+        </iframe>
+    </section>  
    
-    <!-- Privacy Section End -->
+  
     <footer>
         <td align="middle"><span class="copyright"> <strong> &copy; 2024 Katuba. All Rights Reserved. Designed and Maintained Madura Ngoma, SIN: 2111250942</strong> </td> 
       </footer>
